harbor/harbor-core.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-core
  namespace: harbor-system
