harbor/harbor-notary-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-notary-server
  namespace: harbor-system
