harbor/harbor-portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-portal
  namespace: harbor-system
