harbor/06-harbor-notary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress-notary
  namespace: harbor-system
spec:
  ingressClassName: nginx
  rules:
  - host: notary.edson-devops.eti.br
    http:
      paths:
      - backend:
          service:
            name: harbor-notary-server
            port:
              number: 4443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - notary.edson-devops.eti.br
    secretName: tls-harbor-ingress
